FIX random little issues like too long hyperlinks, justified text, and missing margin

--- a/styles/global.css
+++ b/styles/global.css
@@ -46,7 +46,7 @@ body {
 }
 
 .footer .box-container .box a{
-    display: block;
+    display: table;
     font-size: 1.5rem;
     padding: 1em 0;
     color: #eee;
